--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core: ^1.0.1
+  firebase_auth: ^1.0.1
+  google_sign_in: ^5.0.0
+  connectivity:
+  flutter_launcher_icons:
+  firebase_database:
+  cloud_firestore: 
+  url_launcher: ^6.0.9
 
 dev_dependencies:
   flutter_test:
